# mlflow-101

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
config/: config.py
hooks/: post_gen_project.sh  pre_gen_project.sh
notebooks/: 1-IntroMLflow.ipynb  2-LoggingFunctions.ipynb  3-HandlingRuns.ipynb  4-CoreLoggingFunctions.ipynb  5-Autologging.ipynb  EDA.ipynb
